Increase header z-index to prevent carousel controls from appearing over it

--- a/app/styles/partials/_header.scss
+++ b/app/styles/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
   background-color: $containerColor;
   top: 0;
-  z-index: 2;
+  z-index: 99;
 
   #logo {
     display: block;
